@@ -5,6 +5,8 @@
   the original language, to the translated one without substituting
   parameters. This is to have translation support for the Template
   component.
+- Implemented issue #10912: Add translation entries.
+- Added support for the new location element in Linguist version 1.1 files.
 
 
 1.1.6 - Wednesday 05 December 2007
